WTF::RunLoop should not depend on isMainThread() idiom. https://bugs.webkit.org/show_bug.cgi?id=203873 <rdar://problem/56524251>

Reviewed by Saam Barati, Ryosuke Niwa, and Devin Rousso.

Source/JavaScriptCore:

* inspector/JSGlobalObjectScriptDebugServer.cpp:
(Inspector::JSGlobalObjectScriptDebugServer::runLoopMode):
* inspector/JSGlobalObjectScriptDebugServer.h:
* inspector/remote/cocoa/RemoteConnectionToTargetCocoa.mm:
(Inspector::RemoteTargetInitializeGlobalQueue):
(Inspector::RemoteConnectionToTarget::setupRunLoop):
(Inspector::RemoteConnectionToTarget::teardownRunLoop):

Source/WTF:

The isMainThread() idiom is only meaningful for WebCore.  It is less meaningful
for JSC since a VM instance can be entered from multiple threads, as long as only
one thread enters it at any time.  Hence, the concept of a main thread doesn't
make sense at the JSC level.

Since r251036, we started using a WTF::String to represent the RunLoop mode.
This caused problems for JSC clients when USE(CF) since it necessitated the use of
StringWrapperCFAllocator to track the life cycle of the CFStringRef generated from
the WTF::String.

To fix this problem, we should restore the original behavior of using CFStringRefs
as the RunLoop mode token.

* wtf/RunLoop.h:
(WTF::RunLoop::cycle): Deleted.
* wtf/cf/RunLoopCF.cpp:
(WTF::RunLoop::cycle):
* wtf/generic/RunLoopGeneric.cpp:
(WTF::RunLoop::cycle):
* wtf/glib/RunLoopGLib.cpp:
(WTF::RunLoop::cycle):
* wtf/win/RunLoopWin.cpp:
(WTF::RunLoop::cycle):



Canonical link: https://commits.webkit.org/217239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252124 268f45cc-cd09-0410-ab3c-d52691b4dbfc