Source/JavaScriptCore/inspector/JSGlobalObjectScriptDebugServer.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2014-2019 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,6 +26,7 @@
 #pragma once
 
 #include "ScriptDebugServer.h"
+#include <wtf/RunLoop.h>
 
 namespace Inspector {
 
@@ -38,7 +39,7 @@ public:
 
     JSC::JSGlobalObject& globalObject() const { return m_globalObject; }
 
-    static String runLoopMode();
+    static RunLoopMode runLoopMode();
 
 private:
     void attachDebugger() override;
