Source/WTF/wtf/cf/RunLoopCF.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010, 2012 Apple Inc. All rights reserved.
+ * Copyright (C) 2010-2019 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -62,10 +62,10 @@ void RunLoop::wakeUp()
     CFRunLoopWakeUp(m_runLoop.get());
 }
 
-RunLoop::CycleResult RunLoop::cycle(const String& mode)
+RunLoop::CycleResult RunLoop::cycle(RunLoopMode mode)
 {
     CFTimeInterval timeInterval = 0.05;
-    CFRunLoopRunInMode(mode.isNull() ? kCFRunLoopDefaultMode : mode.createCFString().get(), timeInterval, true);
+    CFRunLoopRunInMode(mode, timeInterval, true);
     return CycleResult::Continue;
 }
 
